Fix aligning

--- a/components/FeatureSummaryList/Item/index.module.scss
+++ b/components/FeatureSummaryList/Item/index.module.scss
@@ -8,23 +8,28 @@
 
   &.small {
     .content {
-      text-align: center;
-
       @media (max-width: $mobile-width) {
         margin-top: 40px;
         margin-bottom: 56px;
       }
 
-      .title {
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 32px;
+      .link {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .title {
+          font-weight: 500;
+          font-size: 24px;
+          line-height: 32px;
+        }
       }
 
       .text {
         font-weight: 300;
         font-size: 16px;
         line-height: 24px;
+        text-align: center;
       }
     }
 
